@@ -5,6 +5,7 @@
     * Fix bug with topic and post matching highlighting groups
     * Update GFPastel 2010
     * Add compatibility with Firefox 4.0
+    * Add topic pages to context menu on message lists
 
 2010-05-12:
     * version 0.7.7
